# ai_quant_lib

./: CMakeLists.txt
cmake/: Dependencies.cmake
docs/: api-overview.md  design.md  usage.md
include/quant/backtest/: Backtester.hpp
include/quant/core/: Date.hpp  Exceptions.hpp  LinearAlgebra.hpp  TimeSeries.hpp
include/quant/instruments/: BarrierOption.hpp  EuropeanOption.hpp  Instrument.hpp  VanillaSwap.hpp
include/quant/market/: MarketData.hpp  VolSurface.hpp  YieldCurve.hpp
include/quant/pricing/: BarrierOption.hpp  BlackScholes.hpp  DiscountingSwap.hpp  PricingEngine.hpp  SABR.hpp
include/quant/risk/: Greeks.hpp  Scenario.hpp
include/quant/timeseries/: Models.hpp
include/quant/utils/: Correlation.hpp  Volatility.hpp  YieldTools.hpp
python/: CMakeLists.txt
python/bindings/: pyquant.cpp
python/examples/backtesting/: backtest_demo.py
python/examples/dashboards/: correlation_dashboard.py
python/examples/forecasting/: forecast_demo.py
python/examples/recipes/: funding_spread_recipe.py  volatility_recipe.py  yield_curve_recipe.py
src/: CMakeLists.txt
src/backtest/: Backtester.cpp
src/core/: Date.cpp  Exceptions.cpp  TimeSeries.cpp
src/instruments/: BarrierOption.cpp  EuropeanOption.cpp  VanillaSwap.cpp
src/market/: VolSurface.cpp  YieldCurve.cpp
src/pricing/: BarrierOption.cpp  BlackScholes.cpp  DiscountingSwap.cpp  SABR.cpp
src/risk/: Greeks.cpp  Scenario.cpp
src/timeseries/: ARIMA.cpp  DomainModels.cpp  GARCH.cpp  MLModels.cpp  VAR.cpp
src/utils/: Correlation.cpp  VolTracker.cpp  YieldTools.cpp
tests/: CMakeLists.txt
tests/unit/: test_backtest.cpp  test_black_scholes.cpp  test_date.cpp  test_swap.cpp  test_timeseries_models.cpp  test_utils.cpp
